--- a/index.html
+++ b/index.html
@@ -68,6 +68,46 @@ layout: default
   <div class="container">
     <h2 class="title text-center">About Us</h2>
     <p class="intro text-center">{{ site.org_full_description }}</p>
+    <div class="row">
+      <div class="col-md-4 col-sm-6">
+        <div class="team-member">
+          <div class="team-photo">
+            <img src="assets\team\mills-kelly-1083867055.jpg" alt="Team Member 2" class="img-responsive img-circle" />
+          </div>
+          <h3 class="team-name">Kelly Mills</h3>
+          <p class="team-role">Physician Advisor</p>
+          <p class="team-description">Dr. Mills is a physician and an associate professor of Neurology at Johns Hopkins University. He is the director of the Movement Disorders Division and the Neuromodulation and Advanced Therapies Clinic. </p>
+          <!-- <p class="team-contact">
+            <a href="mailto:kmills@jhmi.edu"><i class="fa fa-envelope"></i> kmills16@jhmi.edu</a>
+          </p> -->
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="team-member">
+          <div class="team-photo">
+            <img src="assets\team\Generic-Profile.jpg" alt="Team Member 3" class="img-responsive img-circle" />
+          </div>
+          <h3 class="team-name">Sarah Phelan</h3>
+          <p class="team-role">Clinical Coordinator</p>
+          <p class="team-description">Sarah Phelan is a health educator at the Johns Hopkins School of Medicine and is the community outreach director of the Movement Disorders Clinic. </p>
+          <!-- <p class="team-contact">
+            <a href="mailto:sphlelan@jhmi.edu"><i class="fa fa-envelope"></i> sphelan2@jhmi.edu</a>
+          </p> -->
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <div class="team-member">
+          <div class="team-photo">
+            <img src="assets\team\fit_1280.png" alt="Team Member 1" class="img-responsive img-circle" />
+          </div>
+          <h3 class="team-name">Jonathan Zhang</h3>
+          <p class="team-role">Student Coordinator</p>
+          <p class="team-description">Jonathan is a junior at Johns Hopkins University studying Biomedical Engineering and Applied Math. </p>
+          <p class="team-contact">
+            <a href="mailto:jzhang234@jhu.edu"><i class="fa fa-envelope"></i> jzhan367@jhu.edu</a>
+          </p>
+        </div>
+      </div>
   </div><!--//container-->
 </section><!--//about-->
 
