--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ layout: default
           <div class="team-photo">
             <img src="assets\team\mills-kelly-1083867055.jpg" alt="Team Member 2" class="img-responsive img-circle" />
           </div>
-          <h3 class="team-name">Kelly Mills</h3>
+          <h3 class="team-name">Dr. David Ifeoluwa Adelani</h3>
           <p class="team-role">Physician Advisor</p>
-          <p class="team-description">Dr. Mills is a physician and an associate professor of Neurology at Johns Hopkins University. He is the director of the Movement Disorders Division and the Neuromodulation and Advanced Therapies Clinic. </p>
+          <p class="team-description">Dr. Adelani is an Assistant Professor at McGill, Core Academic Member at Mila and Canada CIFAR AI Chair. He works on NLP for African languages.  </p>
           <!-- <p class="team-contact">
             <a href="mailto:kmills@jhmi.edu"><i class="fa fa-envelope"></i> kmills16@jhmi.edu</a>
           </p> -->
@@ -87,9 +87,9 @@ layout: default
           <div class="team-photo">
             <img src="assets\team\Generic-Profile.jpg" alt="Team Member 3" class="img-responsive img-circle" />
           </div>
-          <h3 class="team-name">Sarah Phelan</h3>
+          <h3 class="team-name">Dr. Ezekiel Soremekun</h3>
           <p class="team-role">Clinical Coordinator</p>
-          <p class="team-description">Sarah Phelan is a health educator at the Johns Hopkins School of Medicine and is the community outreach director of the Movement Disorders Clinic. </p>
+          <p class="team-description">Dr. Soremekun is an Assistant Professor at Singapore University of Technology and Design (SUTD), Singapore. He leads the Trustworthy SoftWare & AI (TrustWare) research group at SUTD. </p>
           <!-- <p class="team-contact">
             <a href="mailto:sphlelan@jhmi.edu"><i class="fa fa-envelope"></i> sphelan2@jhmi.edu</a>
           </p> -->
@@ -100,11 +100,11 @@ layout: default
           <div class="team-photo">
             <img src="assets\team\fit_1280.png" alt="Team Member 1" class="img-responsive img-circle" />
           </div>
-          <h3 class="team-name">Jonathan Zhang</h3>
+          <h3 class="team-name">Jesujoba O. Alabi</h3>
           <p class="team-role">Student Coordinator</p>
-          <p class="team-description">Jonathan is a junior at Johns Hopkins University studying Biomedical Engineering and Applied Math. </p>
+          <p class="team-description">Jesujoba is a PhD student in Computer Science at Saarland University, Germany. His research interest lies within low-resource NLP. </p>
           <p class="team-contact">
-            <a href="mailto:jzhang234@jhu.edu"><i class="fa fa-envelope"></i> jzhan367@jhu.edu</a>
+            <a href="mailto:jzhang234@jhu.edu"><i class="fa fa-envelope"></i> alabijesujoba@gmail.com</a>
           </p>
         </div>
       </div>
