--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@ layout: default
           <p class="team-description">Jesujoba is a PhD student in Computer Science at Saarland University, Germany. His research interest lies within low-resource NLP. </p>
           <p class="team-contact">
             <a href="mailto:jzhang234@jhu.edu"><i class="fa fa-envelope"></i> alabijesujoba@gmail.com</a>
+         <ul class="social-icons list-inline">
+          <a href="https://x.com/alabi_jesujoba" target="_blank"> <i class="fa fa-twitter"> </i></a>
+           <li class="last"><a href="mailto:alabijesujoba@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+      </ul>
           </p>
         </div>
       </div>
