--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@ layout: default
           <h3 class="team-name">Dr. David Ifeoluwa Adelani</h3>
           <p class="team-role">Physician Advisor</p>
           <p class="team-description">Dr. Adelani is an Assistant Professor at McGill, Core Academic Member at Mila and Canada CIFAR AI Chair. He works on NLP for African languages.  </p>
-          <!-- <p class="team-contact">
-            <a href="mailto:kmills@jhmi.edu"><i class="fa fa-envelope"></i> kmills16@jhmi.edu</a>
-          </p> -->
+          <p class="team-contact">
+          <ul class="social-icons list-inline">
+          <a href="https://x.com/davlanade" target="_blank"> <i class="fa fa-twitter"> </i></a>
+          <li class="last"><a href="mailto:davlanade@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+          </ul>
+          </p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
@@ -90,9 +93,12 @@ layout: default
           <h3 class="team-name">Dr. Ezekiel Soremekun</h3>
           <p class="team-role">Clinical Coordinator</p>
           <p class="team-description">Dr. Soremekun is an Assistant Professor at Singapore University of Technology and Design (SUTD), Singapore. He leads the Trustworthy SoftWare & AI (TrustWare) research group at SUTD. </p>
-          <!-- <p class="team-contact">
-            <a href="mailto:sphlelan@jhmi.edu"><i class="fa fa-envelope"></i> sphelan2@jhmi.edu</a>
-          </p> -->
+          <p class="team-contact">
+          <ul class="social-icons list-inline">
+          <a href="https://x.com/ezekSoremekun" target="_blank"> <i class="fa fa-twitter"> </i></a>
+          <li class="last"><a href="mailto:ezekiel.soremekun@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+          </ul>
+          </p>
         </div>
       </div>
       <div class="col-md-4 col-sm-12">
@@ -104,11 +110,10 @@ layout: default
           <p class="team-role">Student Coordinator</p>
           <p class="team-description">Jesujoba is a PhD student in Computer Science at Saarland University, Germany. His research interest lies within low-resource NLP. </p>
           <p class="team-contact">
-            <a href="mailto:jzhang234@jhu.edu"><i class="fa fa-envelope"></i> alabijesujoba@gmail.com</a>
-         <ul class="social-icons list-inline">
+          <ul class="social-icons list-inline">
           <a href="https://x.com/alabi_jesujoba" target="_blank"> <i class="fa fa-twitter"> </i></a>
-           <li class="last"><a href="mailto:alabijesujoba@gmail.com"><i class="fa fa-envelope"></i></a></li>  
-      </ul>
+          <li class="last"><a href="mailto:alabijesujoba@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+          </ul>
           </p>
         </div>
       </div>
