--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ layout: default
       <div class="col-md-4 col-sm-6">
         <div class="team-member">
           <div class="team-photo">
-            <img src="assets\team\mills-kelly-1083867055.jpg" alt="Team Member 2" class="img-responsive img-circle" />
+            <img src="assets\team\DavidAdelani.png" alt="Team Member 2" class="img-responsive img-circle" />
           </div>
           <h3 class="team-name">Dr. David Ifeoluwa Adelani</h3>
-          <p class="team-role">Physician Advisor</p>
+          <p class="team-role">Director</p>
           <p class="team-description">Dr. Adelani is an Assistant Professor at McGill, Core Academic Member at Mila and Canada CIFAR AI Chair. He works on NLP for African languages.  </p>
           <p class="team-contact">
           <ul class="social-icons list-inline">
@@ -88,10 +88,10 @@ layout: default
       <div class="col-md-4 col-sm-6">
         <div class="team-member">
           <div class="team-photo">
-            <img src="assets\team\Generic-Profile.jpg" alt="Team Member 3" class="img-responsive img-circle" />
+            <img src="assets\team\ezekiel.png" alt="Team Member 3" class="img-responsive img-circle" />
           </div>
           <h3 class="team-name">Dr. Ezekiel Soremekun</h3>
-          <p class="team-role">Clinical Coordinator</p>
+          <p class="team-role">Director</p>
           <p class="team-description">Dr. Soremekun is an Assistant Professor at Singapore University of Technology and Design (SUTD), Singapore. He leads the Trustworthy SoftWare & AI (TrustWare) research group at SUTD. </p>
           <p class="team-contact">
           <ul class="social-icons list-inline">
@@ -104,10 +104,10 @@ layout: default
       <div class="col-md-4 col-sm-12">
         <div class="team-member">
           <div class="team-photo">
-            <img src="assets\team\fit_1280.png" alt="Team Member 1" class="img-responsive img-circle" />
+            <img src="assets\team\jesujoba.jpeg" alt="Team Member 1" class="img-responsive img-circle" />
           </div>
           <h3 class="team-name">Jesujoba O. Alabi</h3>
-          <p class="team-role">Student Coordinator</p>
+          <p class="team-role">Director</p>
           <p class="team-description">Jesujoba is a PhD student in Computer Science at Saarland University, Germany. His research interest lies within low-resource NLP. </p>
           <p class="team-contact">
           <ul class="social-icons list-inline">
