--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ layout: default
           <ul class="social-icons list-inline">
           <a href="https://x.com/alabi_jesujoba" target="_blank"> <i class="fa fa-twitter"> </i></a>
           <li class="last"><a href="mailto:alabijesujoba@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+          <a href="https://ajesujoba.github.io/" target="_blank"> <i class="fa fa-home fa-fw"> </i></a>
           </ul>
           </p>
         </div>
