--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ layout: default
           <p class="team-contact">
           <ul class="social-icons list-inline">
           <a href="https://x.com/davlanade" target="_blank"> <i class="fa fa-twitter"> </i></a>
-          <li class="last"><a href="mailto:davlanade@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+          <li class="last"><a href="mailto:davlanade@gmail.com"><i class="fa fa-envelope"></i></a></li>
+          <a href="https://dadelani.github.io/" target="_blank"> <i class="fa fa-home fa-fw"> </i></a>
           </ul>
           </p>
         </div>
@@ -96,7 +97,8 @@ layout: default
           <p class="team-contact">
           <ul class="social-icons list-inline">
           <a href="https://x.com/ezekSoremekun" target="_blank"> <i class="fa fa-twitter"> </i></a>
-          <li class="last"><a href="mailto:ezekiel.soremekun@gmail.com"><i class="fa fa-envelope"></i></a></li>  
+          <li class="last"><a href="mailto:ezekiel.soremekun@gmail.com"><i class="fa fa-envelope"></i></a></li>
+          <a href="https://ezekiel-soremekun.github.io/" target="_blank"> <i class="fa fa-home fa-fw"> </i></a>
           </ul>
           </p>
         </div>
