--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@ layout: default
   <div class="container text-center">
     <h2 class="title">Research Projects</h2>
     <div class="row">
-      <div class="col-sm-5 col-sm-offset-1 text-right text-right-sm">
-        <h1 class="join-us-intro">In the past we have contributed and led projects such as:<br> Join Us!</h1>
-      </div>
-      <div class="col-sm-5 text-left text-left-sm">
+      <p class="intro text-center">{{ site.org_full_description }}</p>
+      
         
       </div>
     </div>
