--- a/index.html
+++ b/index.html
@@ -133,45 +133,46 @@ layout: default
 
 
 <div class="row">
-  <div class="col-sm-3">
-    <div class="card">
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">Card 1</h5>
-        <p class="card-text">Some text for card 1.</p>
+        <p class="card-text">Some supporting text for card 1.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="card">
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">Card 2</h5>
-        <p class="card-text">Some text for card 2.</p>
+        <p class="card-text">Some supporting text for card 2.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="card">
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">Card 3</h5>
-        <p class="card-text">Some text for card 3.</p>
+        <p class="card-text">Some supporting text for card 3.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="card">
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">Card 4</h5>
-        <p class="card-text">Some text for card 4.</p>
+        <p class="card-text">Some supporting text for card 4.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
   </div>
 </div>
-
-
 
       
       
