--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ layout: default
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Card 1</h5>
-        <p class="card-text">Some supporting text for card 1.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">MasakhaNER</h5>
+        <p class="card-text">Named Entity Recognition for African Languages.</p>
+        <a href="https://github.com/masakhane-io/masakhane-ner" target="_blank"> <i class="fa fa-github"> </i></a>
       </div>
     </div>
   </div>
@@ -146,9 +146,9 @@ layout: default
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Card 2</h5>
-        <p class="card-text">Some supporting text for card 2.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">MAFAND-MT</h5>
+        <p class="card-text">Machine Translation for African Languages.</p>
+        <a href="https://github.com/masakhane-io/lafand-mt" target="_blank"> <i class="fa fa-github"> </i></a>
       </div>
     </div>
   </div>
@@ -156,9 +156,9 @@ layout: default
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Card 3</h5>
-        <p class="card-text">Some supporting text for card 3.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">WorldCuisines</h5>
+        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
+        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank"> <i class="fa fa-github"> </i></a>
       </div>
     </div>
   </div>
@@ -167,8 +167,9 @@ layout: default
     <div class="card border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">Card 4</h5>
-        <p class="card-text">Some supporting text for card 4.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">Masakhane-NLU</p>
+        <a href="#" class="btn btn-primary">Conversation AI and Benchmark datasets for African languages.</a>
+        <a href="https://github.com/masakhane-io/masakhane-nlu" target="_blank"> <i class="fa fa-github"> </i></a>
       </div>
     </div>
   </div>
