--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@ layout: default
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Card 4</h5>
-        <p class="card-text">Masakhane-NLU</p>
-        <a href="#" class="btn btn-primary">Conversation AI and Benchmark datasets for African languages.</a>
+        <h5 class="card-title">Masakhane-NLU</h5>
+        <p class="card-text">Conversation AI and Benchmark datasets for African languages.</p>
         <a href="https://github.com/masakhane-io/masakhane-nlu" target="_blank"> <i class="fa fa-github"> </i></a>
       </div>
     </div>
