--- a/index.html
+++ b/index.html
@@ -163,6 +163,26 @@ layout: default
     </div>
   </div>
 
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">WorldCuisines</h5>
+        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
+        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank"> <i class="fa fa-github"> </i></a>
+      </div>
+    </div>
+  </div>
+
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">WorldCuisines</h5>
+        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
+        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank"> <i class="fa fa-github"> </i></a>
+      </div>
+    </div>
+  </div>
+
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border-dark h-100">
       <div class="card-body">
