--- a/index.html
+++ b/index.html
@@ -131,68 +131,106 @@ layout: default
       <p class="intro text-center">We have contributed and led research projects such as </p>
       <!--button-->
 
-
 <div class="row">
   <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border-dark h-100">
+    <div class="card border border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">MasakhaNER</h5>
         <p class="card-text">Named Entity Recognition for African Languages.</p>
-        <a href="https://github.com/masakhane-io/masakhane-ner" target="_blank"> <i class="fa fa-github"> </i></a>
+        <a href="https://github.com/masakhane-io/masakhane-ner" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
       </div>
     </div>
   </div>
 
   <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border-dark h-100">
+    <div class="card border border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">MAFAND-MT</h5>
         <p class="card-text">Machine Translation for African Languages.</p>
-        <a href="https://github.com/masakhane-io/lafand-mt" target="_blank"> <i class="fa fa-github"> </i></a>
+        <a href="https://github.com/masakhane-io/lafand-mt" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
       </div>
     </div>
   </div>
 
   <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border-dark h-100">
+    <div class="card border border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">WorldCuisines</h5>
         <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
-        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank"> <i class="fa fa-github"> </i></a>
-      </div>
-    </div>
-  </div>
-
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border-dark h-100">
-      <div class="card-body">
-        <h5 class="card-title">WorldCuisines</h5>
-        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
-        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank"> <i class="fa fa-github"> </i></a>
-      </div>
-    </div>
-  </div>
-
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border-dark h-100">
-      <div class="card-body">
-        <h5 class="card-title">WorldCuisines</h5>
-        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
-        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank"> <i class="fa fa-github"> </i></a>
+        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
       </div>
     </div>
   </div>
 
   <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border-dark h-100">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">WorldCuisines</h5>
+        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
+        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- ROW 2 -->
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
       <div class="card-body">
         <h5 class="card-title">Masakhane-NLU</h5>
         <p class="card-text">Conversation AI and Benchmark datasets for African languages.</p>
-        <a href="https://github.com/masakhane-io/masakhane-nlu" target="_blank"> <i class="fa fa-github"> </i></a>
+        <a href="https://github.com/masakhane-io/masakhane-nlu" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">Project 6</h5>
+        <p class="card-text">Short description for project 6.</p>
+        <a href="#" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">Project 7</h5>
+        <p class="card-text">Short description for project 7.</p>
+        <a href="#" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">Project 8</h5>
+        <p class="card-text">Short description for project 8.</p>
+        <a href="#" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
       </div>
     </div>
   </div>
 </div>
+
 
       
       <!---the buttons-->  
