--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ layout: default
     </div>
   </div>
 
-  <!-- ROW 2 -->
+  <!-- SECOND ROW -->
 
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border border-dark h-100">
