--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@ layout: default
       <!--button-->
 
 <div class="row">
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">NiLE</h5>
+        <p class="card-text">Empowering Education Through Language Technology.</p>
+        <a href="https://niletranslate.com/" target="_blank"> <i class="fa fa-home fa-fw"> </i></a>
+        </a>
+      </div>
+    </div>
+  </div>
+  
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border border-dark h-100">
       <div class="card-body">
@@ -168,17 +180,7 @@ layout: default
     </div>
   </div>
 
-  <div class="col-12 col-md-6 col-lg-3 mb-4">
-    <div class="card border border-dark h-100">
-      <div class="card-body">
-        <h5 class="card-title">WorldCuisines</h5>
-        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
-        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank">
-          <i class="fa fa-github"></i>
-        </a>
-      </div>
-    </div>
-  </div>
+
 
   <!-- SECOND ROW -->
 
@@ -194,12 +196,12 @@ layout: default
     </div>
   </div>
 
-  <div class="col-12 col-md-6 col-lg-3 mb-4">
+   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Project 6</h5>
-        <p class="card-text">Short description for project 6.</p>
-        <a href="#" target="_blank">
+        <h5 class="card-title">WorldCuisines</h5>
+        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
+        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank">
           <i class="fa fa-github"></i>
         </a>
       </div>
