--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ layout: default
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Project 7</h5>
-        <p class="card-text">Short description for project 7.</p>
-        <a href="#" target="_blank">
+        <h5 class="card-title">AfriQA</h5>
+        <p class="card-text">Cross-lingual question answering (QA) dataset for African languages.</p>
+        <a href="https://github.com/masakhane-io/afriqa" target="_blank">
           <i class="fa fa-github"></i>
         </a>
       </div>
@@ -223,9 +223,9 @@ layout: default
   <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">Project 8</h5>
-        <p class="card-text">Short description for project 8.</p>
-        <a href="#" target="_blank">
+        <h5 class="card-title">Afri-MCQA</h5>
+        <p class="card-text">Multimodal Cultural Question Answering for African Languages.</p>
+        <a href="https://huggingface.co/datasets/Atnafu/Afri-MCQA" target="_blank">
           <i class="fa fa-github"></i>
         </a>
       </div>
