--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ layout: default
    <div class="col-12 col-md-6 col-lg-3 mb-4">
     <div class="card border border-dark h-100">
       <div class="card-body">
-        <h5 class="card-title">WorldCuisines</h5>
-        <p class="card-text">Multilingual and Multicultural Visual Question Answering.</p>
-        <a href="https://huggingface.co/datasets/worldcuisines/vqa" target="_blank">
+        <h5 class="card-title">BibleTTS</h5>
+        <p class="card-text">A large, high-fidelity, multilingual, and uniquely African speech corpus.</p>
+        <a href="https://masakhane-io.github.io/bibleTTS/" target="_blank">
           <i class="fa fa-github"></i>
         </a>
       </div>
