--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ layout: default
           </div>
           <h3 class="team-name">Jesujoba O. Alabi</h3>
           <p class="team-role">Director</p>
-          <p class="team-description">Jesujoba is a PhD student in Computer Science at Saarland University, Germany. His research interest lies within low-resource NLP. </p>
+          <p class="team-description">Jesujoba is a PhD student in Computer Science at Saarland University, Germany. He works on NLP for low-resource languages, speech processing,  and interpretability of NLP models. 
+ </p>
           <p class="team-contact">
           <ul class="social-icons list-inline">
           <a href="https://x.com/alabi_jesujoba" target="_blank"> <i class="fa fa-twitter"> </i></a>
