--- a/index.html
+++ b/index.html
@@ -234,7 +234,56 @@ layout: default
   </div>
 </div>
 
+  <!-- THIRD ROW -->
 
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">AFRIDOC-MT</h5>
+        <p class="card-text">Document Level MT for Five African Languages.</p>
+        <a href="https://github.com/masakhane-io/afridoc-mt" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+   <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">Warri</h5>
+        <p class="card-text">Machine Translation of Nigerian-Pidgin.</p>
+        <a href="https://github.com/McGill-NLP/Naija-representation-in-LLMs" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">SIB-200</h5>
+        <p class="card-text">Topic Classification for 200+ Languages.</p>
+        <a href="https://github.com/dadelani/sib-200" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="card border border-dark h-100">
+      <div class="card-body">
+        <h5 class="card-title">EkoHate</h5>
+        <p class="card-text">Abusive and Hate Speech Detection of Lagos Election Tweets.</p>
+        <a href="https://github.com/befittingcrown/EkoHate" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
       
       <!---the buttons-->  
       </div>
