--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ layout: default
   <div class="container text-center">
     <h2 class="title">Research Projects</h2>
     <div class="row">
-      <p class="intro text-center">As part of our objectives, we have actively contributed to the development of language technologies for African languages. This includes creating valuable language resources, such as corpora, lexicons, and annotated datasets, to support research and technological applications. We have both contributed to and led several research projects aimed at advancing these technologies. Examples of our work include:</p>
+      <p class="intro text-center">As part of our objectives, we have actively contributed to the development of language technologies for African languages. This includes creating valuable language resources, such as corpora, and annotated datasets, to support research and technological applications. We have both contributed to and led several research projects aimed at advancing these technologies. Examples of our work include:</p>
       <!--button-->
 
 <div class="row">
